--- a/index.html
+++ b/index.html
@@ -2,35 +2,65 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>Frontend Mentor | Todo app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Todo app</title>
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+  <div class="container">
 
-  Todo
+    <div class="header">
+      <h1>Todo</h1>
+      <img src="./images/icon-sun.svg" alt="sun" class="theme-icon">
+    </div>
 
-  <!-- Add dynamic number --> items left
+    <div class="todo-container">
 
-  All
-  Active 
-  Completed
+      <form>
+        <input type="text" placeholder="Create a new todo">
+      </form>
 
-  Clear Completed
+      <div class="todo-list">
+        <div class="todo">
+          <div class="checkbox active-checkbox"><img src="./images/icon-check.svg" alt="checkbox"></div>
+          <p>Todo 1</p>
+          <button class="close"><img src="./images/icon-cross.svg" alt="cross"></button>
+        </div>
+        <div class="todo">
+          <div class="checkbox"><img src="./images/icon-check.svg" alt="checkbox"></div>
+          <p>Todo 1</p>
+          <button class="close"><img src="./images/icon-cross.svg" alt="cross"></button>
+        </div>
+        <div class="todo">
+          <div class="checkbox"><img src="./images/icon-check.svg" alt="checkbox"></div>
+          <p>Todo 1</p>
+          <button class="close"><img src="./images/icon-cross.svg" alt="cross"></button>
+        </div>
+        <div class="todo">
+          <div class="checkbox"><img src="./images/icon-check.svg" alt="checkbox"></div>
+          <p>Todo 1</p>
+          <button class="close"><img src="./images/icon-cross.svg" alt="cross"></button>
+        </div>
+        <div class="todo">
+          <div class="checkbox"><img src="./images/icon-check.svg" alt="checkbox"></div>
+          <p>Todo 1</p>
+          <button class="close"><img src="./images/icon-cross.svg" alt="cross"></button>
+        </div>
 
-  Drag and drop to reorder list
+        <div class="filter">
+          <div class="items-count">5 items left</div>
+          <div class="filter-choice">
+            <div class="all active-filter">All</div>
+            <div class="active">Active</div>
+            <div class="completed">Completed</div>
+          </div>
+          <div class="clear-completed">Clear completed</div>
+        </div>
+      </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    </div>
   </div>
+
 </body>
 </html>
