adds functionality of adding to localstorage, toggle complete, remove item

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   
   <title>Todo app</title>
   <link rel="stylesheet" href="./styles.css">
+  <script src="./script.js" defer></script>
 </head>
 <body>
   <div class="container">
@@ -22,34 +23,9 @@
       </form>
 
       <div class="todo-list">
-        <div class="todo">
-          <div class="checkbox active-checkbox"><img src="./images/icon-check.svg" alt="checkbox"></div>
-          <p>Todo 1</p>
-          <button class="close"><img src="./images/icon-cross.svg" alt="cross"></button>
-        </div>
-        <div class="todo">
-          <div class="checkbox"><img src="./images/icon-check.svg" alt="checkbox"></div>
-          <p>Todo 1</p>
-          <button class="close"><img src="./images/icon-cross.svg" alt="cross"></button>
-        </div>
-        <div class="todo">
-          <div class="checkbox"><img src="./images/icon-check.svg" alt="checkbox"></div>
-          <p>Todo 1</p>
-          <button class="close"><img src="./images/icon-cross.svg" alt="cross"></button>
-        </div>
-        <div class="todo">
-          <div class="checkbox"><img src="./images/icon-check.svg" alt="checkbox"></div>
-          <p>Todo 1</p>
-          <button class="close"><img src="./images/icon-cross.svg" alt="cross"></button>
-        </div>
-        <div class="todo">
-          <div class="checkbox"><img src="./images/icon-check.svg" alt="checkbox"></div>
-          <p>Todo 1</p>
-          <button class="close"><img src="./images/icon-cross.svg" alt="cross"></button>
-        </div>
 
         <div class="filter">
-          <div class="items-count">5 items left</div>
+          <div class="items-count">0 items left</div>
           <div class="filter-choice">
             <div class="all active-filter">All</div>
             <div class="active">Active</div>
