--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <title>Todo app</title>
+  <!-- favicon -->
+  <link rel="shortcut icon" href="./images/icon.png" type="image/x-icon">
   <link rel="stylesheet" href="./styles.css">
   <script src="./script.js" defer></script>
 </head>
